--- a/index.html
+++ b/index.html
@@ -5,13 +5,128 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Be Humble</title>
+    <!-- Linking CSS-->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Fonts -->
+    <!--Footer Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <!-- -->
+    <!--Banner Start -->
+    <section class="banner1">
+      <div class="text">
+        <h1>Let’s Help Those Who Are More In Need</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis
+          vel nihil sint harum, cumque natus. Expedita asperiores consectetur,
+          at dignissimos excepturi tempore voluptatum maiores!
+        </p>
+      </div>
+    </section>
+    <!--Banner End -->
+
+    <!--Donate-now Start -->
+
+    <section class="donate-today">
+      <div class="d-text">
+        <h1>Donate Today</h1>
+        <p>Select any amount you want to donate!</p>
+      </div>
+      <div class="amount-flex">
+        <div class="d-amount">
+          <h1>100tk</h1>
+        </div>
+        <div class="d-amount" id="d-amount-200">
+          <h1>200tk</h1>
+        </div>
+        <div class="d-amount">
+          <h1>500tk</h1>
+        </div>
+        <div class="d-amount">
+          <h1>1000tk</h1>
+        </div>
+        <div class="d-amount">
+          <h1>5000tk</h1>
+        </div>
+      </div>
+      <div class="d-form">
+        <form>
+          <input
+            type="number"
+            name=""
+            class="amount"
+            placeholder="Other amount (TK)"
+          />
+          <input type="submit" value="Donate now" class="Donate-now" />
+        </form>
+      </div>
+    </section>
+    <!--Donate-now end -->
+
+    <!--Donate-plan Start -->
+    <section class="donate-plan">
+      <div class="d-text">
+        <h1>Our Donate Plan</h1>
+        <p>
+          Checkout our donation plans and donate any amount according to your
+          ability.
+        </p>
+      </div>
+      <div class="plans-flex">
+        <div class="plans" id="plan-one">
+          <img src="icons/food.png" alt="" />
+          <h1>Food for a family</h1>
+          <p>
+            We take care about all of the food a family needs for their
+            daily-life.
+          </p>
+        </div>
+        <div class="plans" id="plan-two">
+          <img src="icons/shelter.png" alt="" />
+          <h1>Food for a family</h1>
+          <p>
+            We take care about all of the food a family needs for their
+            daily-life.
+          </p>
+        </div>
+        <div class="plans" id="plan-three">
+          <img src="icons/Frame-1.png" alt="" />
+          <h1>Food for a family</h1>
+          <p>
+            We take care about all of the food a family needs for their
+            daily-life.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!--Donate-plan End -->
+
+    <!--Updates Start -->
+    <section class="updates">
+      <div class="text">
+        <h1>Get Our Updates</h1>
+        <p>Input your email below to get notified about our latest activity.</p>
+      </div>
+      <div class="form">
+        <form>
+          <input type="email" name="" class="email" placeholder="    E-mail" />
+          <input type="submit" value="Subscribe" class="subscribe" />
+        </form>
+      </div>
+    </section>
+    <!--Updates End -->
   </body>
 
   <footer>
