donate-today-added

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
   <body>
     <!--Banner Start -->
     <section class="banner1">
-      <div class="text">
+      <div class="b-text">
         <h1>Let’s Help Those Who Are More In Need</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis
           vel nihil sint harum, cumque natus. Expedita asperiores consectetur,
           at dignissimos excepturi tempore voluptatum maiores!
         </p>
+        <a href="#">Donate now</a>
       </div>
     </section>
     <!--Banner End -->
@@ -69,7 +70,7 @@
             class="amount"
             placeholder="Other amount (TK)"
           />
-          <input type="submit" value="Donate now" class="Donate-now" />
+          <button type="submit" class="Donate-now">Donate now</button>
         </form>
       </div>
     </section>
