--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 
   <body>
     <!--Banner Start -->
-    <section class="banner1">
+    <section class="banner">
       <div class="b-text">
         <h1>Let’s Help Those Who Are More In Need</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis
-          vel nihil sint harum, cumque natus. Expedita asperiores consectetur,
-          at dignissimos excepturi tempore voluptatum maiores!
+          There are lot of people who need our help. by our help they can
+          servive easily. It's our duty to help them. it's humanity.
         </p>
         <a href="#">Donate now</a>
       </div>
@@ -68,7 +67,7 @@
             type="number"
             name=""
             class="amount"
-            placeholder="Other amount (TK)"
+            placeholder="         Other amount (TK)"
           />
           <button type="submit" class="Donate-now">Donate now</button>
         </form>
