--- a/index.html
+++ b/index.html
@@ -95,19 +95,15 @@
         </div>
         <div class="plans" id="plan-two">
           <img src="icons/shelter.png" alt="" />
-          <h1>Food for a family</h1>
+          <h1>Shelter</h1>
           <p>
-            We take care about all of the food a family needs for their
-            daily-life.
+            We take care about shelter also. So we are making home for them.
           </p>
         </div>
         <div class="plans" id="plan-three">
           <img src="icons/Frame-1.png" alt="" />
-          <h1>Food for a family</h1>
-          <p>
-            We take care about all of the food a family needs for their
-            daily-life.
-          </p>
+          <h1>Education</h1>
+          <p>By education them, they can live by their own.</p>
         </div>
       </div>
     </section>
